# libnpy

./: CMakeLists.txt  README.md
include/: npy.hpp
tests/: test_tensor.cpp
